# ocr_qt

./: CMakeLists.txt  README.md  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  screen.h  setting.cpp  setting.h  setting.ui  traymenu.cpp  traymenu.h
include/: mainwindow.h  traymenu.h
release/: ocr_qt
resource/: image.qrc
src/: mainwindow.cpp  screen.cpp  setting.cpp  traymenu.cpp
ui/: mainwindow.ui
